Fix @import paths for GitHub Pages

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,12 @@
-@import url(/vendor/normalize.css);
-@import url(/vendor/fonts.css);
-@import url(/blocks/body.css);
-@import url(/blocks/page.css);
-@import url(/blocks/header.css);
-@import url(/blocks/navbar.css);
-@import url(/blocks/pricing.css);
-@import url(/blocks/hero.css);
-@import url(/blocks/about.css);
-@import url(/blocks/contacts.css);
-@import url(/blocks/booking.css);
-@import url(/blocks/footer.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/body.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/navbar.css);
+@import url(../blocks/pricing.css);
+@import url(../blocks/hero.css);
+@import url(../blocks/about.css);
+@import url(../blocks/contacts.css);
+@import url(../blocks/booking.css);
+@import url(../blocks/footer.css);
